--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,3 +73,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/SpaceScavenger.APlayerController.InteractDelegate",NewName="/Script/SpaceScavenger.APlayerController.InteractedDelegate")
