Ported HackTool to cpp, added better rope interaction, and text display

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Project/Sandbox/VerticalSlice.VerticalSlice
+EditorStartupMap=/Game/Project/Sandbox/VerticalSlice.VerticalSlice
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -76,3 +77,5 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/SpaceScavenger.APlayerController.InteractDelegate",NewName="/Script/SpaceScavenger.APlayerController.InteractedDelegate")
++EnumRedirects=(OldName="/Script/SpaceScavenger.HackableState",NewName="/Script/SpaceScavenger.EHackableState")
+
