--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,6 +49,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Bias=0.500000
+r.AntiAliasingMethod=3
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
