Functional CLI for interactables

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,4 +81,6 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/SpaceScavenger.APlayerController.InteractDelegate",NewName="/Script/SpaceScavenger.APlayerController.InteractedDelegate")
 +EnumRedirects=(OldName="/Script/SpaceScavenger.HackableState",NewName="/Script/SpaceScavenger.EHackableState")
++PropertyRedirects=(OldName="/Script/SpaceScavenger.ACCLIProcessor.Namespace",NewName="/Script/SpaceScavenger.ACCLIProcessor.CommandNamespace")
++ClassRedirects=(OldName="/Script/SpaceScavenger.DoorCLIProcessor",NewName="/Script/SpaceScavenger.ACDoorCLIProcessor")
 
