Removes duplicate blueprints, adds wip hud, reduces auto exposure

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Project/Sandbox/VerticalSlice.VerticalSlice
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/Gamemode/CustomGamemode.CustomGamemode_C
+GlobalDefaultGameMode=/Game/Project/Gamemode/GM_CustomGamemode.GM_CustomGamemode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -56,11 +56,18 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
-r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.DefaultFeature.LocalExposure.HighlightContrastScale=0.800000
+r.DefaultFeature.LocalExposure.ShadowContrastScale=0.800000
 r.DefaultFeature.AutoExposure=True
-r.DefaultFeature.AutoExposure.Bias=0.500000
+r.DefaultFeature.AutoExposure.Bias=0.100000
 r.AntiAliasingMethod=3
+r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.AmbientOcclusion=True
+r.DefaultFeature.MotionBlur=True
+r.DefaultFeature.LensFlare=False
+r.MSAACount=1
+r.ScreenPercentage.Default=100.000000
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
