Upgrade 5.5 and class refactor for naming convention

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,8 +97,15 @@ ManualIPAddress=
 
 
 [CoreRedirects]
-+PropertyRedirects=(OldName="/Script/SpaceScavenger.APlayerController.InteractDelegate",NewName="/Script/SpaceScavenger.APlayerController.InteractedDelegate")
++PropertyRedirects=(OldName="/Script/SpaceScavenger.APlayerController.InteractDelegate",NewName="/Script/SpaceScavenger.EVAPlayerController.InteractedDelegate")
 +EnumRedirects=(OldName="/Script/SpaceScavenger.HackableState",NewName="/Script/SpaceScavenger.EHackableState")
-+PropertyRedirects=(OldName="/Script/SpaceScavenger.ACCLIProcessor.Namespace",NewName="/Script/SpaceScavenger.ACCLIProcessor.CommandNamespace")
-+ClassRedirects=(OldName="/Script/SpaceScavenger.DoorCLIProcessor",NewName="/Script/SpaceScavenger.ACDoorCLIProcessor")
++PropertyRedirects=(OldName="/Script/SpaceScavenger.ACCLIProcessor.Namespace",NewName="/Script/SpaceScavenger.CLIProcessor.CommandNamespace")
++ClassRedirects=(OldName="/Script/SpaceScavenger.AAirlockController",NewName="/Script/SpaceScavenger.AirlockController")
++ClassRedirects=(OldName="/Script/SpaceScavenger.ACCLIProcessor",NewName="/Script/SpaceScavenger.CLIProcessor")
++ClassRedirects=(OldName="/Script/SpaceScavenger.ADoor",NewName="/Script/SpaceScavenger.Door")
++ClassRedirects=(OldName="/Script/SpaceScavenger.ACDoorCLIProcessor",NewName="/Script/SpaceScavenger.DoorCLIProcessor")
++ClassRedirects=(OldName="/Script/SpaceScavenger.AHackable",NewName="/Script/SpaceScavenger.Hackable")
++ClassRedirects=(OldName="/Script/SpaceScavenger.AHackTool",NewName="/Script/SpaceScavenger.HackTool")
++ClassRedirects=(OldName="/Script/SpaceScavenger.AInteractable",NewName="/Script/SpaceScavenger.Interactable")
++ClassRedirects=(OldName="/Script/SpaceScavenger.APlayerController",NewName="/Script/SpaceScavenger.EVAPlayerController")
 
